@@ -6,7 +6,10 @@ ChangeLog
 
 GIT HEAD
 
-- Fixed for some strict tests for Qt4 vs. Qt5 configure builds.
+* A new top-level widget window geometry state save and restore
+  sub-routine is now in effect. (EXPERIMENTAL)
+
+* Fixed for some strict tests for Qt4 vs. Qt5 configure builds.
 
 
 0.3.0  2015-03-25  Pre-LAC2015 release frenzy.
